Actions
Bug #6094
closed[OpenSSL] wrong argument of rsa_generate()
Bug #6094:
[OpenSSL] wrong argument of rsa_generate()
Description
=begin
Seems the type of second argument of ((%ext/openssl/ossl_pkey_rsa.c%)):(({rsa_generate()})) should be (({unsigned long})), not (({int})).
=end
Files
Updated by shyouhei (Shyouhei Urabe) over 14 years ago
- Status changed from Open to Assigned
Updated by nobu (Nobuyoshi Nakada) over 14 years ago
- Status changed from Assigned to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r35102.
Nobuyoshi, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- ext/openssl/ossl_pkey_rsa.c (rsa_generate): fix argument type.
[Bug #6094]
Updated by naruse (Yui NARUSE) over 14 years ago
- Status changed from Closed to Open
- % Done changed from 100 to 0
Updated by naruse (Yui NARUSE) over 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
Actions