Refix Bug #6094: use unsigned long integer literal.

* ext/openssl/ossl_pkey_rsa.c (rsa_generate): fix argument type.
  [Bug #6094]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35117 b2dd03c8-39d4-4d8f-98ff-823fe69b080e